{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 54,
  "lineage": "13faeb06-7bb5-5f69-c24e-7f47253b84d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064693cdff6e65b16",
            "association_id": "eipassoc-05759a490695facf0",
            "domain": "vpc",
            "id": "eipalloc-064693cdff6e65b16",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-07bdee92654eb8ff8",
            "private_dns": "ip-10-0-1-83.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.83",
            "public_dns": "ec2-13-229-167-189.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.167.189",
            "public_ipv4_pool": "amazon",
            "tags": {
              "nmae": "eip-dev"
            },
            "tags_all": {
              "nmae": "eip-dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:629992731367:internet-gateway/igw-0e1d756077a7ce8e3",
            "id": "igw-0e1d756077a7ce8e3",
            "owner_id": "629992731367",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-01c7b967e5a49ca88"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:629992731367:targetgroup/jenkins-tg/a17cff6db083446f",
            "arn_suffix": "targetgroup/jenkins-tg/a17cff6db083446f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:629992731367:targetgroup/jenkins-tg/a17cff6db083446f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jenkins-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01c7b967e5a49ca88"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064693cdff6e65b16",
            "connectivity_type": "public",
            "id": "nat-0e339c85762ef122f",
            "network_interface_id": "eni-07bdee92654eb8ff8",
            "private_ip": "10.0.1.83",
            "public_ip": "13.229.167.189",
            "subnet_id": "subnet-011c46624f581e4be",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dataroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:629992731367:route-table/rtb-068db1b211f42e24c",
            "id": "rtb-068db1b211f42e24c",
            "owner_id": "629992731367",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e339c85762ef122f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dataroute"
            },
            "tags_all": {
              "Name": "dataroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c7b967e5a49ca88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:629992731367:route-table/rtb-03cb3ab7297d38927",
            "id": "rtb-03cb3ab7297d38927",
            "owner_id": "629992731367",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e339c85762ef122f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "privateroute"
            },
            "tags_all": {
              "Name": "privateroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c7b967e5a49ca88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:629992731367:route-table/rtb-0bafc668b0240d1a2",
            "id": "rtb-0bafc668b0240d1a2",
            "owner_id": "629992731367",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e1d756077a7ce8e3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicroute"
            },
            "tags_all": {
              "Name": "publicroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c7b967e5a49ca88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1a76b97cb30a11d",
            "route_table_id": "rtb-068db1b211f42e24c",
            "subnet_id": "subnet-0e13d076afb582fb1"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.dataroute",
            "aws_subnet.datasubnet",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9656e7d1419ab0b",
            "route_table_id": "rtb-068db1b211f42e24c",
            "subnet_id": "subnet-05b9d8d662cfa5156"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.dataroute",
            "aws_subnet.datasubnet",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3674f7b1a8aa33b",
            "route_table_id": "rtb-068db1b211f42e24c",
            "subnet_id": "subnet-0af81a717a0095bd0"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.dataroute",
            "aws_subnet.datasubnet",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0960f3e42039c1d66",
            "route_table_id": "rtb-03cb3ab7297d38927",
            "subnet_id": "subnet-0269c3f9c3dc42d58"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.privateroute",
            "aws_subnet.privatesubnet",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0085405313c1f1eed",
            "route_table_id": "rtb-03cb3ab7297d38927",
            "subnet_id": "subnet-0fabc451e5a18e57c"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.privateroute",
            "aws_subnet.privatesubnet",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002f0dea5534e5926",
            "route_table_id": "rtb-03cb3ab7297d38927",
            "subnet_id": "subnet-0e26fb913955a8914"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.privateroute",
            "aws_subnet.privatesubnet",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4f54fa976b7bf38",
            "route_table_id": "rtb-0bafc668b0240d1a2",
            "subnet_id": "subnet-011c46624f581e4be"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicroute",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03884d6d1aa53aa2d",
            "route_table_id": "rtb-0bafc668b0240d1a2",
            "subnet_id": "subnet-02d668f41acc6d2ed"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicroute",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073386bf30e984403",
            "route_table_id": "rtb-0bafc668b0240d1a2",
            "subnet_id": "subnet-0127c121e6332a1c6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicroute",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:629992731367:security-group/sg-082995e25bc558a3a",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082995e25bc558a3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "end user",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls end user",
            "name_prefix": "",
            "owner_id": "629992731367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c7b967e5a49ca88"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "datasubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:629992731367:subnet/subnet-0e13d076afb582fb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e13d076afb582fb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629992731367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-data1-1"
            },
            "tags_all": {
              "Name": "dev-data1-1"
            },
            "vpc_id": "vpc-01c7b967e5a49ca88"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:629992731367:subnet/subnet-05b9d8d662cfa5156",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b9d8d662cfa5156",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629992731367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-data1-2"
            },
            "tags_all": {
              "Name": "dev-data1-2"
            },
            "vpc_id": "vpc-01c7b967e5a49ca88"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:629992731367:subnet/subnet-0af81a717a0095bd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af81a717a0095bd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629992731367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-data1-3"
            },
            "tags_all": {
              "Name": "dev-data1-3"
            },
            "vpc_id": "vpc-01c7b967e5a49ca88"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:629992731367:subnet/subnet-0269c3f9c3dc42d58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0269c3f9c3dc42d58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629992731367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private1-1"
            },
            "tags_all": {
              "Name": "dev-private1-1"
            },
            "vpc_id": "vpc-01c7b967e5a49ca88"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:629992731367:subnet/subnet-0fabc451e5a18e57c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fabc451e5a18e57c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629992731367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private1-2"
            },
            "tags_all": {
              "Name": "dev-private1-2"
            },
            "vpc_id": "vpc-01c7b967e5a49ca88"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:629992731367:subnet/subnet-0e26fb913955a8914",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e26fb913955a8914",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629992731367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private1-3"
            },
            "tags_all": {
              "Name": "dev-private1-3"
            },
            "vpc_id": "vpc-01c7b967e5a49ca88"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:629992731367:subnet/subnet-011c46624f581e4be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011c46624f581e4be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "629992731367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-public1-1"
            },
            "tags_all": {
              "Name": "stage-public1-1"
            },
            "vpc_id": "vpc-01c7b967e5a49ca88"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:629992731367:subnet/subnet-02d668f41acc6d2ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d668f41acc6d2ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "629992731367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-public1-2"
            },
            "tags_all": {
              "Name": "stage-public1-2"
            },
            "vpc_id": "vpc-01c7b967e5a49ca88"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:629992731367:subnet/subnet-0127c121e6332a1c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0127c121e6332a1c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "629992731367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-public1-3"
            },
            "tags_all": {
              "Name": "stage-public1-3"
            },
            "vpc_id": "vpc-01c7b967e5a49ca88"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:629992731367:vpc/vpc-01c7b967e5a49ca88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dee838202cbe9d6a",
            "default_route_table_id": "rtb-083f7d4fe1396e8ff",
            "default_security_group_id": "sg-0163ce99da66745f9",
            "dhcp_options_id": "dopt-0de4d47f0d7cd3979",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01c7b967e5a49ca88",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-083f7d4fe1396e8ff",
            "owner_id": "629992731367",
            "tags": {
              "Name": "vpc-dev"
            },
            "tags_all": {
              "Name": "vpc-dev"
            }
          }
        }
      ]
    }
  ]
}